<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/dashboard_bottom_home" />
    <item
        android:id="@+id/nav_exams"
        android:icon="@drawable/ic_assignment"
        android:title="@string/dashboard_bottom_exams" />
    <item
        android:id="@+id/nav_classes"
        android:icon="@drawable/ic_users"
        android:title="@string/dashboard_bottom_classes" />
    <item
        android:id="@+id/nav_notifications"
        android:icon="@drawable/ic_notification"
        android:title="@string/notifications_title" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_user"
        android:title="@string/dashboard_bottom_profile" />
</menu>
